common-applications/test-environment/opengauss-tryme-website/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: opengauss-tryme-website-ingress
  namespace: opengauss-tryme-website
spec:
  tls:
    - hosts:
        - tryme.test.osinfra.cn
      secretName: opengauss-tryme-website-tls
  rules:
    - host: tryme.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: opengauss-tryme-website-service
              servicePort: 80
            path: /

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: opengauss-tryme-backend-ingress
  namespace: opengauss-tryme-website
spec:
  tls:
    - hosts:
        - tryme.test.osinfra.cn
      secretName: opengauss-tryme-website-tls
  rules:
    - host: tryme.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: opengauss-playground-backend-svc
              servicePort: 80
            path: /api(/|$)(.*)
